--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
       height: 50%;
       background-color:black;
     }
-    
+    h3{
+    color: white;
+    }
     .player {
       max-width: 300px;
       max-height: 430px;
